--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,5 @@
 theme = "hugo-theme-cleanwhite"
+baseURL = "https://awesome-wozniak-c3e09c.netlify.com/"
 
 [permalinks]
     post = "/:year/:month/:day/:slug/" 
